--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
 body {
-    background-color: lightblue;
-    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
-
+.banner{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75));
+    background-size: cover;
+    background-position: center;
+}
 h1 {
     color: darkblue;
 }
