--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75));
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(images/supermario.jpg);
     background-size: cover;
     background-position: center;
 }
