--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,16 @@
 body {
+    height: 100%;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
 }
+main{
+    text-align: center;
+}
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(images/supermario.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(images/supermariov2.png);
     background-size: cover;
     background-position: center;
 }
